feat: nav/foot, colors, TS

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,10 @@
     </noscript>
     <div id="app">
     </div>
+    <script>
+      console.log('( ͡ಠ ʖ̯ ͡ಠ)');
+      console.log('Watchu looking for?');
+    </script>
     <!-- built files will be auto injected -->
   </body>
 </html>
