feat: landing intro

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,8 @@
     </div>
     <script>
       console.log('( ͡ಠ ʖ̯ ͡ಠ)');
-      console.log('Watchu looking for?');
+      console.log('You know I know you know how to look at the dev console right?');
+      console.log(`Don't @ me https://github.com/VictorFateh`);
     </script>
     <!-- built files will be auto injected -->
   </body>
