--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
 
 <head>
   <meta charset="utf-8">
@@ -16,8 +16,6 @@
   <link rel="apple-touch-icon" href="icon.png">
   <link rel="icon" href="favicon.ico">
 
-  <!-- <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css"> -->
   <link rel="stylesheet" href="node_modules/tailwindcss/dist/tailwind.min.css">
   <link rel="stylesheet" href="css/overwrites.css">
 
@@ -47,7 +45,7 @@
                   </a>
                 </div>
                 <div class="mt-3 sm:mt-0 sm:ml-3">
-                  <a href="https://www.linkedin.com/in/victorfateh/" target="_blank"
+                  <a href="https://www.linkedin.com/in/victorfateh/" target="_blank" rel="noopener"
                     class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-blue-700 bg-blue-100 hover:bg-blue-200 md:py-4 md:text-lg md:px-10">
                     LinkedIn
                   </a>
@@ -60,16 +58,6 @@
       </div>
     </div>
 
-    <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
-
-    <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-    <script>
-      window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-      ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-    </script>
-    <script src="https://www.google-analytics.com/analytics.js" async></script>
 </body>
 
 </html>
