--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
                 class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg  sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
                 I'm rebuilding this website so for now here's what you get
               </p>
-              <div class="mt-5 sm:mt-8 sm:flex sm:justify-center ">
-                <div class="rounded-md ">
+              <div class="mt-6 sm:mt-8 sm:flex sm:justify-center mx-4">
+                <div class="rounded-md">
                   <a href="resume.pdf" target="_blank"
                     class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 md:py-4 md:text-lg md:px-10">
                     Resume
                   </a>
                 </div>
-                <div class="mt-3 sm:mt-0 sm:ml-3">
+                <div class="mt-4 sm:mt-0 sm:ml-3">
                   <a href="https://www.linkedin.com/in/victorfateh/" target="_blank" rel="noopener"
                     class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-blue-700 bg-blue-100 hover:bg-blue-200 md:py-4 md:text-lg md:px-10">
                     LinkedIn
