--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <div class="relative overflow-hidden bg-neutral-800">
     <div class="max-w-7xl mx-auto">
       <div class="relative z-10 pb-8 sm:pb-16 md:pb-20 lg:w-full lg:pb-28 xl:pb-32">
-          <main class="mt-10 mx-auto max-w-7xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28">
+          <main class=" mt-10 mx-auto max-w-7xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28">
             <div class="text-center mt-5">
               <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl">
                 <span class="sm:inline block text-indigo-600">Victor</span>
@@ -35,18 +35,19 @@
               </h1>
               <p
                 class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg  sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
-                I'm rebuilding this website so for now here's what you get
+                You expected some overkill website huh?
               </p>
               <div class="mt-6 sm:mt-8 sm:flex sm:justify-center mx-4">
-                <div class="rounded-md">
+                <!-- <div class="rounded-md">
                   <a href="resume.html" 
-                    class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 md:py-4 md:text-lg md:px-10">
+                    class="shadow w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 md:py-4 md:text-lg md:px-10">
                     Resume
                   </a>
-                </div>
+                </div> -->
+                
                 <div class="mt-4 sm:mt-0 sm:ml-3">
                   <a href="https://www.linkedin.com/in/victorfateh/" target="_blank" rel="noopener"
-                    class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-blue-700 bg-blue-100 hover:bg-blue-200 md:py-4 md:text-lg md:px-10">
+                    class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-blue-700 hover:bg-blue-800">
                     LinkedIn
                   </a>
                   <span class="text-xs mt-1 flex justify-center">(I'm hiring)</span>
@@ -57,7 +58,9 @@
         </div>
       </div>
     </div>
-
+    <div class="absolute inset-x-0 bottom-0 text-center text-xs my-2">
+      <a href="/topsecretfbionly.html" class="animate-bounce inline-flex items-center justify-center px-5 border border-transparent text-xs font-medium rounded-md text-gray-400 hover:bg-indigo-100">click this if you're cool</a>
+    </div>
 </body>
 
 </html>
