feat: copy update, new btn

--- a/resume.html
+++ b/resume.html
@@ -26,16 +26,13 @@
   <div class="relative overflow-hidden">
     <div class="max-w-7xl mx-auto ">
       <div class="overflow-hidden z-10 pb-8 sm:pb-16 md:pb-20 lg:w-full lg:pb-28 xl:pb-32 min-h-screen">
-        <main class="mt-6 ">
+        <main class="mt-6">
           <div class="mt-6 sm:mt-8 sm:flex sm:justify-start mx-4">
             <div class="mt-4 sm:mt-0 sm:ml-3">
-              <a href="/"
-                class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-sm font-medium rounded-md text-blue-700 bg-blue-100 hover:bg-blue-200 md:py-4 md:px-10">
-                Back
-              </a>
+              <a href="/" class="inline-flex justify-center rounded-md border border-transparent bg-indigo-500 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Back</a>
             </div>
           </div>
-          <iframe src="https://docs.google.com/document/d/e/2PACX-1vTjgUQI8gdyQG8eBOiAQXb1LcgIX7GJQNgNDS9EjilXDUAALb8EC2Vm39abuEvcAH_ac-mwGbhMeMRz/pub?embedded=true" class="absolute w-full h-full" frameborder="0"></iframe>
+          <iframe class="absolute w-full h-full" frameborder="0"  src="https://docs.google.com/document/d/e/2PACX-1vTjgUQI8gdyQG8eBOiAQXb1LcgIX7GJQNgNDS9EjilXDUAALb8EC2Vm39abuEvcAH_ac-mwGbhMeMRz/pub?embedded=true" ></iframe>
         </main>
       </div>
     </div>
