--- a/index.html
+++ b/index.html
@@ -35,22 +35,14 @@
               </h1>
               <p
                 class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg  sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
-                You expected some overkill website huh?
+                No time for overkill websites
               </p>
               <div class="mt-6 sm:mt-8 sm:flex sm:justify-center mx-4">
-                <!-- <div class="rounded-md">
-                  <a href="resume.html" 
-                    class="shadow w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 md:py-4 md:text-lg md:px-10">
-                    Resume
-                  </a>
-                </div> -->
-                
                 <div class="mt-4 sm:mt-0 sm:ml-3">
                   <a href="https://www.linkedin.com/in/victorfateh/" target="_blank" rel="noopener"
-                    class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-blue-700 hover:bg-blue-800">
+                    class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-blue-700 hover:bg-blue-900">
                     LinkedIn
                   </a>
-                  <span class="text-xs mt-1 flex justify-center">(I'm hiring)</span>
                 </div>
               </div>
             </div>
@@ -59,7 +51,7 @@
       </div>
     </div>
     <div class="absolute inset-x-0 bottom-0 text-center text-xs my-2">
-      <a href="/topsecretfbionly.html" class="animate-bounce inline-flex items-center justify-center px-5 border border-transparent text-xs font-medium rounded-md text-gray-400 hover:bg-indigo-100">click this if you're cool</a>
+      <a href="/youshouldnthaveclicked.html" class="px-2 py-1 rounded-lg text-gray-400 hover:bg-red-500 hover:text-white cursor-not-allowed">don't click</a>
     </div>
 </body>
 
