--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
               </h1>
               <p
                 class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg  sm:mx-auto md:mt-5 md:text-xl lg:mx-0 cursor-default">
-                No time for overkill websites
+                As functional as it comes
               </p>
               <div class="mt-6 sm:mt-8 sm:flex sm:justify-center mx-4">
                 <div class="mt-4 sm:mt-0 sm:ml-3">
                   <a href="https://www.linkedin.com/in/victorfateh/" target="_blank" rel="noopener"
                     class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-blue-700 hover:bg-blue-900">
-                    LinkedIn
+                    About Me
                   </a>
                 </div>
               </div>
