--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
                 <span class="sm:inline block hover:text-indigo-600">Fateh</span>
               </h1>
               <p
-                class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg  sm:mx-auto md:mt-5 md:text-xl lg:mx-0 cursor-default">
-                As functional as it comes
+                class="mt-4 text-base text-gray-500 sm:mt-5 sm:text-lg  sm:mx-auto md:mt-5 md:text-xl lg:mx-0 cursor-default">
+                As functional as they get
               </p>
               <div class="mt-6 sm:mt-8 sm:flex sm:justify-center mx-4">
                 <div class="mt-4 sm:mt-0 sm:ml-3">
                   <a href="https://www.linkedin.com/in/victorfateh/" target="_blank" rel="noopener"
-                    class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-blue-700 hover:bg-blue-900">
-                    About Me
+                    class="inline-flex items-center justify-center px-5 py-2 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-900">
+                    More
                   </a>
                 </div>
               </div>
