--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               </h1>
               <p
                 class="mt-4 text-base text-gray-500 sm:mt-5 sm:text-lg  sm:mx-auto md:mt-5 md:text-xl lg:mx-0 cursor-default">
-                As functional as they get
+                As functional as it gets
               </p>
               <div class="mt-6 sm:mt-8 sm:flex sm:justify-center mx-4">
                 <div class="mt-4 sm:mt-0 sm:ml-3">
