--- a/youshouldnthaveclicked.html
+++ b/youshouldnthaveclicked.html
@@ -23,32 +23,60 @@
 </head>
 
 <body>
-
-  <div class="relative overflow-hidden bg-neutral-800">
-    <div class="max-w-7xl mx-auto">
-      <div class="relative z-10 pb-8 sm:pb-16 md:pb-20 lg:w-full lg:pb-28 xl:pb-32">
-          <main class=" mt-10 mx-auto max-w-7xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28 cursor-default">
-              <p
-                class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-xs  sm:mx-auto md:mt-5 md:text-lg lg:mx-0">
-                Great job
-              </p>
-              <p
-                class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-xs  sm:mx-auto md:mt-5 md:text-lg lg:mx-0">
-                I build useful things for fun
-              </p>
-              <p
-                class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-xs  sm:mx-auto md:mt-5 md:text-lg lg:mx-0">
-                I also build things that aren't useful
-              </p>
-              <p
-                class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-xs  sm:mx-auto md:mt-5 md:text-lg lg:mx-0">
-                Which is why I didn't give you a <span onclick="history.back()" class="cursor-pointer hover:text-gray-200 font-semibold">back</span> button
-              </p>
-
+    <div class="relative overflow-hidden bg-neutral-800 px-6 py-24 sm:py-32 lg:overflow-visible lg:px-0 cursor-default">
+      <div class="mx-auto grid max-w-2xl grid-cols-1 gap-x-8 lg:mx-0 lg:max-w-none lg:grid-cols-1 lg:items-start lg:gap-y-4">
+        <div class="lg:col-span-2 lg:col-start-1 lg:row-start-1 lg:mx-auto lg:grid lg:w-full lg:max-w-7xl lg:grid-cols-1 lg:gap-x-8 lg:px-8">
+          <div class="lg:pr-4">
+            <!-- <div class="lg:max-w-lg"> -->
+            <div>
+              <p class="text-base font-semibold leading-7 text-indigo-600">Great,</p>
+              <h1 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">You found me</h1>
+              <p class="mt-8 text-lg text-gray-700 cursor-help">Why does it feel like the computer is <span class="text-indigo-500 cursor-wait">hard at work</span> when I click and there's a spinner?</p>
+              <p class="text-lg text-gray-700 cursor-help">Why are some showers intuitive while others require a PhD in thermodynamics to use?</p>
+              <p class="mt-2 text-xl text-indigo-700 font-semibold mt-2">These are the important questions I seek to answer</p>
+            </div>
+          </div>
+        </div>
+        <!-- <div class="lg:col-span-2 lg:col-start-1 lg:row-start-2 lg:mx-auto lg:grid lg:w-full lg:max-w-7xl lg:grid-cols-2 lg:gap-x-8 lg:px-8">
+          <div class="lg:pr-4">
+            <div class="max-w-xl text-base leading-7 text-gray-700 lg:max-w-lg">
+              <p class="text-xl leading-8 text-gray-700">Other things I do</p>
+              <ul role="list" class="mt-8 space-y-8 text-gray-600">
+                <li class="flex gap-x-3">
+                  <svg class="mt-1 h-5 w-5 flex-none text-indigo-600" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                    <path fill-rule="evenodd" d="M5.5 17a4.5 4.5 0 01-1.44-8.765 4.5 4.5 0 018.302-3.046 3.5 3.5 0 014.504 4.272A4 4 0 0115 17H5.5zm3.75-2.75a.75.75 0 001.5 0V9.66l1.95 2.1a.75.75 0 101.1-1.02l-3.25-3.5a.75.75 0 00-1.1 0l-3.25 3.5a.75.75 0 101.1 1.02l1.95-2.1v4.59z" clip-rule="evenodd" />
+                  </svg>
+                  <span><strong class="font-semibold text-gray-900">Push to deploy.</strong> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.</span>
+                </li>
+                <li class="flex gap-x-3">
+                  <svg class="mt-1 h-5 w-5 flex-none text-indigo-600" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                    <path fill-rule="evenodd" d="M10 1a4.5 4.5 0 00-4.5 4.5V9H5a2 2 0 00-2 2v6a2 2 0 002 2h10a2 2 0 002-2v-6a2 2 0 00-2-2h-.5V5.5A4.5 4.5 0 0010 1zm3 8V5.5a3 3 0 10-6 0V9h6z" clip-rule="evenodd" />
+                  </svg>
+                  <span><strong class="font-semibold text-gray-900">SSL certificates.</strong> Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat commodo.</span>
+                </li>
+                <li class="flex gap-x-3">
+                  <svg class="mt-1 h-5 w-5 flex-none text-indigo-600" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                    <path d="M4.632 3.533A2 2 0 016.577 2h6.846a2 2 0 011.945 1.533l1.976 8.234A3.489 3.489 0 0016 11.5H4c-.476 0-.93.095-1.344.267l1.976-8.234z" />
+                    <path fill-rule="evenodd" d="M4 13a2 2 0 100 4h12a2 2 0 100-4H4zm11.24 2a.75.75 0 01.75-.75H16a.75.75 0 01.75.75v.01a.75.75 0 01-.75.75h-.01a.75.75 0 01-.75-.75V15zm-2.25-.75a.75.75 0 00-.75.75v.01c0 .414.336.75.75.75H13a.75.75 0 00.75-.75V15a.75.75 0 00-.75-.75h-.01z" clip-rule="evenodd" />
+                  </svg>
+                  <span><strong class="font-semibold text-gray-900">Database backups.</strong> Ac tincidunt sapien vehicula erat auctor pellentesque rhoncus. Et magna sit morbi lobortis.</span>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div> -->
+        <div class="lg:col-span-2 lg:col-start-1 lg:row-start-3 lg:mx-auto lg:grid lg:w-full lg:max-w-7xl lg:grid-cols-1 lg:gap-x-8 lg:px-8">
+          <div class="lg:pr-4">
+            <div class="lg:max-w-lg">
+              <p class="mt-6 text-lg leading-8 text-gray-700">I build useful things,<br> sometimes I build things that aren't useful,</p>
+              <p class="text-lg leading-8 text-gray-700">which is why I didn't give you a button to go <span onclick="history.back()" class="cursor-pointer hover:text-white font-semibold">back</span></p>
+            </div>
+            <div class="lg:max-w-lg">
               <div class="mt-4">
                 <a href="resume.html" class="inline-flex justify-center rounded-md border border-transparent bg-indigo-500 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Resume</a>
               </div>
-          </main>
+            </div>
+          </div>
         </div>
       </div>
     </div>
