--- a/index.html
+++ b/index.html
@@ -35,13 +35,19 @@
               </h1>
               <p
                 class="mt-4 text-base text-gray-500 sm:mt-5 sm:text-lg  sm:mx-auto md:mt-5 md:text-xl lg:mx-0 cursor-default">
-                As functional as it gets
+                Keep it simple
               </p>
               <div class="mt-6 sm:mt-8 sm:flex sm:justify-center mx-4">
                 <div class="mt-4 sm:mt-0 sm:ml-3">
-                  <a href="https://www.linkedin.com/in/victorfateh/" target="_blank" rel="noopener"
+                  <a href="/resume.html"
                     class="inline-flex items-center justify-center px-5 py-2 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-900">
-                    More
+                    Resume
+                  </a>
+                </div>
+                <div class="mt-4 sm:mt-0 sm:ml-3">
+                  <a href="https://www.linkedin.com/in/victorfateh/" target="_blank" rel="noopener"
+                    class="inline-flex items-center justify-center px-5 py-2 border border-transparent text-base font-medium rounded-md text-white bg-blue-600 hover:bg-blue-900">
+                    LinkedIn
                   </a>
                 </div>
               </div>
@@ -51,7 +57,7 @@
       </div>
     </div>
     <div class="absolute inset-x-0 bottom-0 text-center text-xs my-2">
-      <a href="/youshouldnthaveclicked.html" class="px-2 py-1 rounded-lg text-gray-400 hover:bg-red-500 hover:text-white cursor-not-allowed">don't click</a>
+      <a href="/youshouldnthaveclicked.html" class="px-2 py-1 rounded-lg text-gray-400 hover:bg-red-500 hover:text-white cursor-not-allowed">Do not click</a>
     </div>
 </body>
 
