--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
   <link rel="stylesheet" href="css/overwrites.css">
 
   <meta name="theme-color" content="#fafafa">
+
+  <style>
+    .fade-to-color-title {
+      color: #1D1D1F;
+      transition: color 0.5s;
+    }
+    .fade-to-color-title:hover {
+      color: #5046E4;
+    }
+  </style>
 </head>
 
 <body>
@@ -29,10 +39,11 @@
       <div class="relative z-10 pb-8 sm:pb-16 md:pb-20 lg:w-full lg:pb-28 xl:pb-32">
           <main class=" mt-10 mx-auto max-w-7xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28">
             <div class="text-center mt-5">
-              <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl cursor-default">
+              <!-- <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl cursor-default">
                 <span class="sm:inline block text-indigo-600 hover:text-black">Victor</span>
                 <span class="sm:inline block hover:text-indigo-600">Fateh</span>
-              </h1>
+              </h1> -->
+              <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl cursor-default fade-to-color-title">Victor Fateh</h1>
               <p
                 class="mt-4 text-base text-gray-500 sm:mt-5 sm:text-lg  sm:mx-auto md:mt-5 md:text-xl lg:mx-0 cursor-default">
                 Keep it simple
