feat: tailwind upgrade to 3.3

--- a/resume.html
+++ b/resume.html
@@ -16,7 +16,8 @@
   <link rel="apple-touch-icon" href="icon.png">
   <link rel="icon" href="favicon.ico">
 
-  <link rel="stylesheet" href="node_modules/tailwindcss/dist/tailwind.min.css">
+  <!-- <link rel="stylesheet" href="node_modules/tailwindcss/dist/tailwind.min.css"> -->
+  <link rel="stylesheet" href="css/tailwind.css">
   <link rel="stylesheet" href="css/overwrites.css">
 
   <meta name="theme-color" content="#fafafa">
@@ -29,10 +30,12 @@
         <main class="mt-6">
           <div class="mt-6 sm:mt-8 sm:flex sm:justify-start mx-4">
             <div class="mt-4 sm:mt-0 sm:ml-3">
-              <a href="/" class="inline-flex justify-center rounded-md border border-transparent bg-indigo-500 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Back</a>
+              <a href="/"
+                class="inline-flex justify-center rounded-md border border-transparent bg-indigo-500 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Back</a>
             </div>
           </div>
-          <iframe class="absolute w-full h-full" frameborder="0"  src="https://docs.google.com/document/d/e/2PACX-1vSPzQ3DOqTSX596U_0De06gne9wlRE-5GblmpBQor-U9uxJhGNcckWKZrjblCKkrxO-AofqwFxe8omy/pub?embedded=true" ></iframe>
+          <iframe class="absolute w-full h-full" frameborder="0"
+            src="https://docs.google.com/document/d/e/2PACX-1vSPzQ3DOqTSX596U_0De06gne9wlRE-5GblmpBQor-U9uxJhGNcckWKZrjblCKkrxO-AofqwFxe8omy/pub?embedded=true"></iframe>
         </main>
       </div>
     </div>
