--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link rel="apple-touch-icon" href="icon.png">
   <link rel="icon" href="favicon.ico">
 
-  <link rel="stylesheet" href="node_modules/tailwindcss/dist/tailwind.min.css">
+  <link rel="stylesheet" href="css/tailwind.css">
   <link rel="stylesheet" href="css/overwrites.css">
 
   <meta name="theme-color" content="#fafafa">
@@ -26,6 +26,7 @@
       color: #1D1D1F;
       transition: color 0.5s;
     }
+
     .fade-to-color-title:hover {
       color: #5046E4;
     }
@@ -34,42 +35,41 @@
 
 <body>
 
-  <div class="relative overflow-hidden bg-neutral-800">
+  <div class="relative overflow-hidden">
     <div class="max-w-7xl mx-auto">
       <div class="relative z-10 pb-8 sm:pb-16 md:pb-20 lg:w-full lg:pb-28 xl:pb-32">
-          <main class=" mt-10 mx-auto max-w-7xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28">
-            <div class="text-center mt-5">
-              <!-- <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl cursor-default">
-                <span class="sm:inline block text-indigo-600 hover:text-black">Victor</span>
-                <span class="sm:inline block hover:text-indigo-600">Fateh</span>
-              </h1> -->
-              <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl cursor-default fade-to-color-title">Victor Fateh</h1>
-              <p
-                class="mt-4 text-base text-gray-500 sm:mt-5 sm:text-lg  sm:mx-auto md:mt-5 md:text-xl lg:mx-0 cursor-default">
-                Keep it simple
-              </p>
-              <div class="mt-6 sm:mt-8 sm:flex sm:justify-center mx-4">
-                <div class="mt-4 sm:mt-0 sm:ml-3">
-                  <a href="/resume.html"
-                    class="inline-flex items-center justify-center px-5 py-2 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-900">
-                    Resume
-                  </a>
-                </div>
-                <div class="mt-4 sm:mt-0 sm:ml-3">
-                  <a href="https://www.linkedin.com/in/victorfateh/" target="_blank" rel="noopener"
-                    class="inline-flex items-center justify-center px-5 py-2 border border-transparent text-base font-medium rounded-md text-white bg-blue-600 hover:bg-blue-900">
-                    LinkedIn
-                  </a>
-                </div>
+        <main class=" mt-10 mx-auto max-w-7xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28">
+          <div class="text-center mt-5">
+            <h1
+              class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl cursor-default fade-to-color-title">
+              Victor Fateh</h1>
+            <p
+              class="mt-4 text-base text-gray-500 sm:mt-5 sm:text-lg  sm:mx-auto md:mt-5 md:text-xl lg:mx-0 cursor-default">
+              Keep it simple
+            </p>
+            <div class="mt-6 sm:mt-8 sm:flex sm:justify-center mx-4">
+              <div class="mt-4 sm:mt-0 sm:ml-3">
+                <a href="/resume.html"
+                  class="inline-flex items-center justify-center px-5 py-2 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-900">
+                  Resume
+                </a>
+              </div>
+              <div class="mt-4 sm:mt-0 sm:ml-3">
+                <a href="https://www.linkedin.com/in/victorfateh/" target="_blank" rel="noopener"
+                  class="inline-flex items-center justify-center px-5 py-2 border border-transparent text-base font-medium rounded-md text-white bg-blue-600 hover:bg-blue-900">
+                  LinkedIn
+                </a>
               </div>
             </div>
-          </main>
-        </div>
+          </div>
+        </main>
       </div>
     </div>
-    <div class="absolute inset-x-0 bottom-0 text-center text-xs my-2">
-      <a href="/youshouldnthaveclicked.html" class="px-2 py-1 rounded-lg text-gray-400 hover:bg-red-500 hover:text-white cursor-not-allowed">Do not click</a>
-    </div>
+  </div>
+  <div class="absolute inset-x-0 bottom-0 text-center text-xs my-2">
+    <a href="/youshouldnthaveclicked.html"
+      class="px-2 py-1 rounded-lg text-gray-400 hover:bg-red-500 hover:text-white cursor-not-allowed">Do not click</a>
+  </div>
 </body>
 
 </html>
