--- a/resume.html
+++ b/resume.html
@@ -30,11 +30,21 @@
           <div class="mt-6 sm:mt-8 sm:flex sm:justify-start mx-4">
             <div class="mt-4 sm:mt-0 sm:ml-3">
               <a href="/"
-                class="inline-flex justify-center rounded-md border border-transparent bg-indigo-500 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Back</a>
+                class="inline-flex justify-center rounded-md border border-transparent bg-indigo-500 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">back</a>
             </div>
           </div>
-          <iframe class="absolute w-full h-full" frameborder="0"
-            src="https://docs.google.com/document/d/e/2PACX-1vSPzQ3DOqTSX596U_0De06gne9wlRE-5GblmpBQor-U9uxJhGNcckWKZrjblCKkrxO-AofqwFxe8omy/pub?embedded=true"></iframe>
+          <!-- <iframe class="absolute w-full h-full" frameborder="0"
+            src="https://docs.google.com/document/d/e/2PACX-1vSPzQ3DOqTSX596U_0De06gne9wlRE-5GblmpBQor-U9uxJhGNcckWKZrjblCKkrxO-AofqwFxe8omy/pub?embedded=true"></iframe> -->
+          <div class="mx-2">
+            <div
+            style="position: relative; width: 100%; height: 0; padding-top: 141.4286%; padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden; border-radius: 8px; will-change: transform;">
+            <iframe loading="lazy"
+              style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+              src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFpi9YX6y0&#x2F;view?embed"
+              allowfullscreen="allowfullscreen" allow="fullscreen">
+            </iframe>
+          </div>
+          </div>
         </main>
       </div>
     </div>
