feat: canva examples

--- a/hi-canva.html
+++ b/hi-canva.html
@@ -38,24 +38,90 @@
             </p>
             <p class="mt-6 text-lg text-gray-700">Why are some shower controls intuitive while others require a PhD in
               thermodynamics to get right?</p>
-            <p class="text-lg text-gray-700">Did you know the sound of thunder in films is composed of layers of tiger roars and guitar
+            <p class="text-lg text-gray-700">Did you know the sound of thunder in films is composed of layers of tiger
+              roars and guitar
               strums?</p>
             <p class="text-lg text-gray-700">Why are some doors intuitive enough to not need push/pull sign?</p>
-            <p class="text-lg text-gray-700">Why do certain colors make us feel certain ways? Why can a color pallet make us feel nostalgic? </p>
+            <p class="text-lg text-gray-700">Why do certain colors make us feel certain ways? Why can a color pallet
+              make us feel nostalgic? </p>
             <p class="text-lg text-gray-700">At what point does a
-              <span class="text-indigo-500 cursor-wait font-semibold">spinner</span> spinning trigger you to worry that something
+              <span class="text-indigo-500 cursor-wait font-semibold">spinner</span> spinning trigger you to worry that
+              something
               went wrong?
             </p>
             <p class="mt-4 text-lg">I can't <span class="text-indigo-500 font-semibold">not</span> think about things
               like these</p>
-            <p class="mt-8 text-lg font-semibold">If your dog ate my resume, you can find it
+            <p class="mt-8 text-lg font-semibold">If your dog ate my resume, it's ok you can find it
               <a href="/resume.html"
                 class="inline-flex justify-center rounded-md border py-1 px-2 shadow-sm hover:text-white hover:bg-indigo-500">here</a>
               forever
             </p>
-            <p class="text-sm text-gray-400">(Thank the person who made embedding via export so easy in Canva)
             </p>
           </div>
+          <div>
+            <p class="my-8 text-sm">You can thank the person who made embedding via export so easy in Canva for the
+              following</p>
+            <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFpmKRAbj0&#x2F;view?utm_content=DAFpmKRAbj0&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link"
+              target="_blank" rel="noopener" class="font-semibold text-md text-indigo-500">Victor as a travel agency</a>
+            <div
+              style="position: relative; width: 100%; height: 0; padding-top: 70.7071%;padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-bottom: 0.9em; overflow: hidden;border-radius: 8px; will-change: transform;">
+
+              <iframe loading="lazy"
+                style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+                src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFpmKRAbj0&#x2F;view?embed"
+                allowfullscreen="allowfullscreen" allow="fullscreen">
+              </iframe>
+            </div>
+
+
+            <div class="mt-6">
+              <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFpma-3Y9I&#x2F;watch?utm_content=DAFpma-3Y9I&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link"
+                target="_blank" rel="noopener" class="font-semibold text-md text-indigo-500">Victor as an overly
+                dramatic
+                video</a>
+              <div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
+                padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-bottom: 0.9em; overflow: hidden;
+                border-radius: 8px; will-change: transform;">
+                <iframe loading="lazy"
+                  style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+                  src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFpma-3Y9I&#x2F;watch?embed"
+                  allowfullscreen="allowfullscreen" allow="fullscreen">
+                </iframe>
+              </div>
+            </div>
+
+          </div>
+          <div class="mt-6">
+            <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFpmKCfjZY&#x2F;view?utm_content=DAFpmKCfjZY&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link"
+              target="_blank" rel="noopener" class="font-semibold text-md text-indigo-500">Victor as creepy album
+              art</a>
+            <div
+              style="position: relative; padding-top: 100.0000%; padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-bottom: 0.9em; overflow: hidden; border-radius: 8px; will-change: transform;">
+              <iframe loading="lazy"
+                style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+                src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFpmKCfjZY&#x2F;view?embed"
+                allowfullscreen="allowfullscreen" allow="fullscreen">
+              </iframe>
+            </div>
+
+          </div>
+
+          <div class="mt-6">
+            <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFpmQ4HXqE&#x2F;view?utm_content=DAFpmQ4HXqE&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link"
+              target="_blank" rel="noopener" class="font-semibold text-md text-indigo-500">Victor as spammy sales
+              email</a>
+            <div style="position: relative; width: 100%; height: 0; padding-top: 141.4358%;
+            padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-bottom: 0.9em; overflow: hidden;
+            border-radius: 8px; will-change: transform;">
+              <iframe loading="lazy"
+                style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+                src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFpmQ4HXqE&#x2F;view?embed"
+                allowfullscreen="allowfullscreen" allow="fullscreen">
+              </iframe>
+            </div>
+          </div>
+
+
         </div>
       </div>
     </div>
