feat: canva logo

--- a/hi-canva.html
+++ b/hi-canva.html
@@ -20,6 +20,18 @@
   <link rel="stylesheet" href="css/overwrites.css">
 
   <meta name="theme-color" content="#fafafa">
+
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
+
+  <style>
+    #canva-word {
+      background: linear-gradient(to right, #09BBCF, #7830E6);
+      -webkit-background-clip: text;
+      background-clip: text;
+      color: transparent;
+      font-size: 36px;
+    }
+  </style>
 </head>
 
 <body>
@@ -30,21 +42,29 @@
         class="lg:col-span-2 lg:col-start-1 lg:row-start-1 lg:mx-auto lg:grid lg:w-full lg:max-w-7xl lg:grid-cols-1 lg:gap-x-8 lg:px-8">
         <div class="lg:pr-4">
           <div>
-            <p class="text-base font-semibold leading-7 text-indigo-500">Oh you actually clicked on it,</p>
-            <h1 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Hi Canva recruiter</h1>
+            <div class="text-center md:text-left">
+              <p class="text-base font-semibold leading-7 text-indigo-500">Oh you actually clicked on it,</p>
+              <h1 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Hi <span
+                  id="canva-word">Canva</span> recruiter</h1>
+
+            </div>
             <p class="mt-8 text-lg leading-8 text-gray-700">I'm passionate about solving complex problems <span
                 class="text-indigo-500 font-semibold">creatively</span> and <span
                 class="text-indigo-500 font-semibold">simply</span>
             </p>
-            <p class="mt-6 text-lg text-gray-700">Why are some shower controls intuitive while others require a PhD in
+            <p class="mt-6 xs:mb-4 text-md md:text-lg text-gray-700">Why are some shower controls intuitive while others
+              require a PhD in
               thermodynamics to get right?</p>
-            <p class="text-lg text-gray-700">Did you know the sound of thunder in films is composed of layers of tiger
+            <p class="xs:mb-4 text-md md:text-lg text-gray-700">Did you know the sound of thunder in films is composed
+              of layers of tiger
               roars and guitar
               strums?</p>
-            <p class="text-lg text-gray-700">Why are some doors intuitive enough to not need push/pull sign?</p>
-            <p class="text-lg text-gray-700">Why do certain colors make us feel certain ways? Why can a color pallet
+            <p class="xs:mb-4 text-md md:text-lg text-gray-700">Why are some doors intuitive enough to not need
+              push/pull sign?</p>
+            <p class="xs:mb-4 text-md md:text-lg text-gray-700">Why do certain colors make us feel certain ways? Why can
+              a color pallet
               make us feel nostalgic? </p>
-            <p class="text-lg text-gray-700">At what point does a
+            <p class="xs:mb-4 text-md md:text-lg text-gray-700">At what point does a
               <span class="text-indigo-500 cursor-wait font-semibold">spinner</span> spinning trigger you to worry that
               something
               went wrong?
@@ -53,14 +73,14 @@
               like these</p>
             <p class="mt-8 text-lg font-semibold">If your dog ate my resume, it's ok you can find it
               <a href="/resume.html"
-                class="inline-flex justify-center rounded-md border py-1 px-2 shadow-sm hover:text-white hover:bg-indigo-500">here</a>
+                class="inline-flex justify-center rounded-md border py-1 px-2 shadow-sm text-indigo-600 hover:text-white hover:bg-indigo-500">here</a>
               forever
             </p>
             </p>
           </div>
           <div>
-            <p class="my-8 text-sm">You can thank the person who made embedding via export so easy in Canva for the
-              following</p>
+            <p class="mt-8 mb-2 text-sm italic">You can thank the person who made embedding so easy in Canva for these
+            </p>
             <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFpmKRAbj0&#x2F;view?utm_content=DAFpmKRAbj0&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link"
               target="_blank" rel="noopener" class="font-semibold text-md text-indigo-500">Victor as a travel agency</a>
             <div
