fix: affinity prod values

--- a/hi-affinity.html
+++ b/hi-affinity.html
@@ -48,7 +48,7 @@
                 class="primary-color font-semibold">simple</span>
               solution to a complex problem
             </p>
-            <p class="mt-4 xs:mb-4 text-md md:text-lg text-gray-700">My product values I stand by</p>
+            <p class="mt-4 xs:mb-4 text-md md:text-lg text-gray-700">My product values,</p>
             <ul class="mt-2 list-inside list-disc text-md text-gray-600">
               <li>Empower the people around you to make the right decisions</li>
               <li>Data + direct people engagement = The right information to make decisions</li>
