feat: acorns page

--- a/hi-acorns.html
+++ b/hi-acorns.html
@@ -23,7 +23,7 @@
 
   <style>
     .primary-color {
-      color: #1a595d;
+      color: #73C942;
     }
   </style>
 </head>
@@ -37,9 +37,9 @@
         <div class="lg:pr-4">
           <div>
             <div class="text-center md:text-left">
-              <p class="text-base font-semibold leading-7 text-gray-500">Oh you actually clicked on it,</p>
+              <p class="text-base font-semibold leading-7 text-gray-500">Oh you clicked on it,</p>
               <h1 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Hi <span
-                  class="primary-color">Sonder</span> recruiter
+                  class="primary-color">Acorns</span>
               </h1>
 
             </div>
