--- a/hi-recruiter.html
+++ b/hi-recruiter.html
@@ -56,7 +56,7 @@
               <li>Frequent releases > big-bang releases</li>
               <li>Teams fail when they don't have a shared understanding of scope</li>
               <li>Focus on customer outcomes, the solutions will follow</li>
-              <li>Hold strong opinions, losely</li>
+              <li>Hold strong opinions, loosely</li>
             </ul>
 
             <p class="mt-4 text-md md:text-lg text-gray-700">If your dog ate my resume,
