feat: remove old apps + new hi only page

--- a/hi.html
+++ b/hi.html
@@ -23,7 +23,7 @@
 
   <style>
     .primary-color {
-      color: #95BF47;
+      color: #6366F1;
     }
   </style>
 </head>
@@ -37,34 +37,33 @@
         <div class="lg:pr-4">
           <div>
             <div class="text-center md:text-left">
-              <p class="text-base font-semibold leading-7 text-gray-500">Oh you actually clicked on it,</p>
+              <p class="text-base leading-6 text-gray-500">Oh you clicked on it,</p>
               <h1 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Hi <span
-                  class="primary-color">Shopify</span> recruiter
+                  class="primary-color">human</span>
               </h1>
 
             </div>
-            <p class="mt-8 text-lg leading-8 text-gray-700">There's always a <span
+            <p class="mt-8 text-md sm:text-lg leading-8 text-gray-700">I believe there's always a <span
                 class="primary-color font-semibold">creative</span> and <span
                 class="primary-color font-semibold">simple</span>
-              solution to a complex problem
+              solution to complex problems
             </p>
-            <p class="mt-4 xs:mb-4 text-md md:text-lg text-gray-700">My product values,</p>
-            <ul class="mt-2 list-inside list-disc text-md text-gray-600">
-              <li>Empower the people around you to make the right decisions</li>
-              <li>Data + direct people engagement = The right information to make decisions</li>
-              <li>Hypothesize, test, repeat</li>
-              <li>Frequent releases > big-bang releases</li>
-              <li>Teams fail when they don't have a shared understanding of scope</li>
-              <li>Focus on customer outcomes, the solutions will follow</li>
-              <li>Hold strong opinions, losely</li>
+            <p class="mt-4 xs:mb-4 text-md sm:text-lg text-gray-700">My core values,</p>
+            <ul class="mt-2 sm:ml-4 list-inside list-disc text-md sm:text-lg text-gray-600">
+              <li class="mb-2 sm:mb-0">Empower the people around you to make the right decisions</li>
+              <li class="mb-2 sm:mb-0">Data + direct people engagement = The right information to make decisions</li>
+              <li class="mb-2 sm:mb-0">Hypothesize, test, repeat</li>
+              <li class="mb-2 sm:mb-0">Frequent releases > big-bang releases</li>
+              <li class="mb-2 sm:mb-0">Teams fail when they don't have a shared understanding of scope</li>
+              <li class="mb-2 sm:mb-0">Focus on customer outcomes, the solutions will follow</li>
+              <li>Hold strong opinions, loosely</li>
             </ul>
 
-            <p class="mt-4 text-md md:text-lg text-gray-700">If your dog ate my resume,
+            <p class="mt-4 text-md sm:text-lg text-gray-700">If your gen-ai-powered-robo-dog ate my resume,
               you can find it
               <a href="/resume.html"
                 class="inline-flex justify-center primary-color hover:text-black font-semibold">here</a>
               or go <a href="/" class="inline-flex justify-center primary-color hover:text-black font-semibold">home</a>
-            </p>
             </p>
           </div>
         </div>
